--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <title>Home</title>
 </head>
 
-<body>
+<body id="top">
         <!-- Navigation bar-->
         <nav>
                 <div class="checkbtn">
@@ -296,17 +296,17 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="text" name="name" placeholder="Name" id="name" required></h2>
+                                                <h2><input type="text" name="name" placeholder="Name" id="name"></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="email" name="email" placeholder="Email" id="email" required></h2>
+                                                <h2><input type="email" name="email" placeholder="Email" id="email"></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><input type="text" name="msg" placeholder="Message" id="msg" required></h2>
+                                                <h2><input type="text" name="msg" placeholder="Message" id="msg"></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
@@ -318,6 +318,25 @@
                 </div>
         </div>
         <!-- contact section end -->
+        <!-- back to top -->
+        <div class="top">
+                <div class="round">
+                        <div class="icon">
+                               <a href="#top"><i class="fa-solid fa-arrow-up"></i></a>
+                        </div>
+                </div>
+        </div>
+        <!-- back to top end -->
+        <footer>
+                <div class="footer">
+                        <div class="icons">
+                                <a href="https://www.instagram.com/mr_3rr0r_501/"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/c/Mr3rr0r501"><i class="fa-brands fa-youtube"></i></a>  
+                                <a href="https://www.linkedin.com/in/yuvaraj-a-57a103171/"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=100027796417995"><i class="fa-brands fa-facebook"></i></a>
+                        </div>
+                </div>
+        </footer>
 </body>
 
 </html>
