--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
         <footer>
                 <div class="footer">
                         <div class="icons">
-                                <a href="https://www.instagram.com/mr_3rr0r_501/"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/c/Mr3rr0r501"><i class="fa-brands fa-youtube"></i></a>  
-                                <a href="https://www.linkedin.com/in/yuvaraj-a-57a103171/"><i class="fa-brands fa-linkedin"></i></a>
-                                <a href="https://www.facebook.com/profile.php?id=100027796417995"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/mr_3rr0r_501/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/c/Mr3rr0r501" target="_blank"><i class="fa-brands fa-youtube"></i></a>  
+                                <a href="https://www.linkedin.com/in/yuvaraj-a-57a103171/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=100027796417995" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         </div>
                 </div>
         </footer>
