update links and meta

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 
 <head>
         <meta charset="UTF-8" />
+        <meta property="og:title" content="Profile">
+        <meta property="og:image" content="/assets/logo.jpg"/>
+        <meta name="description" content="Here you will get about my projects, achievements and my contact details ">
+        <meta name="author" content="Yuvaraj | Mr_3rr0r_501">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
-
         <link rel="stylesheet" href="styles/style.css" />
         <script src="https://code.jquery.com/jquery-3.6.1.js"
                 integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
@@ -84,7 +87,7 @@
                         <div class="line">
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="#">P-H-Y-Wifi</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/P_H_Y-WIFI">P-H-Y-Wifi</a></h2>
                                                 <p>P-H-Y-Wifi is <b>Shell</b> script based tool.This tool will help to
                                                         analyze and test the security of wireless network with the help
                                                         of <b>Aircrack-ng</b>.</p>
@@ -100,7 +103,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="#">Local to Air</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/Local-to-air">Local to Air</a></h2>
                                                 <p>This tool will help to share your local files to remote user with the
                                                         help of <b>ngrok</b> tunneling.Also you can host your static or
                                                         dynamic (PHP) websites with help of this tool. </p>
@@ -115,7 +118,7 @@
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="#">Easy-Phishing</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/easy-phishing">Easy-Phishing</a></h2>
                                                 <p>Fake Phishing pages for
                                                         <b>Instagram</b>,<b>Twitter</b>,<b>Facebook</b> and <b>Gmail</b>
                                                         This tool is educational purpose.This tool available in
@@ -133,7 +136,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="#">Subdomain-Takeover</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/subdomain-takeover">Subdomain-Takeover</a></h2>
                                                 <p>This tool will help to find vulnerable subdomains (for subdomain
                                                         takeover vulnerability) based on subdomain's response body.</p>
                                                 <ul style="list-style: none;">
@@ -146,7 +149,7 @@
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="#">Utube-downloader</a> </h2>
+                                                <h2><a href="https://github.com/yuvarajucet/utube-download">Utube-downloader</a> </h2>
                                                 <p>Download your favorite youtube videos with this script!</p>
                                                 <ul style="list-style: none;">
                                                         <li><b>Build with:</b></li>
@@ -158,7 +161,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="#">PY-CTF</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/pyctf">PY-CTF</a></h2>
                                                 <p>This game have some common real world vulnerability to exploit.
                                                         Example : <b>Stored-XSS</b>,<b>Account Takeover</b>,<b>Image
                                                                 Meta data extraction</b> and <b>etc...</b></p>
@@ -176,7 +179,7 @@
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="#">ARP-Spoofing Detection and Prevension</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/ARP-spoofing-detection">ARP-Spoofing Detection and Prevension</a></h2>
                                                 <p>ARP-Spoofing detection script having automated Detection and
                                                         Prevension modules. It continuesly Monitering router's client
                                                         Entry table and found ARP-Spoofing attack it automatically find
@@ -192,7 +195,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="#">More comming soon...</a></h2>
+                                                <h2><a href="">More comming soon...</a></h2>
                                                 <p>
                                                 </p>
                                         </div>
@@ -277,7 +280,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="#">More In-Progress...</a></h2>
+                                                <h2><a href="">More In-Progress...</a></h2>
                                         </div>
                                 </div>
                         </div>
@@ -322,7 +325,7 @@
         <div class="top">
                 <div class="round">
                         <div class="icon">
-                               <a href="#top"><i class="fa-solid fa-arrow-up"></i></a>
+                               <a href="#"><i class="fa-solid fa-arrow-up"></i></a>
                         </div>
                 </div>
         </div>
@@ -330,10 +333,10 @@
         <footer>
                 <div class="footer">
                         <div class="icons">
-                                <a href="https://www.instagram.com/mr_3rr0r_501/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="https://www.youtube.com/c/Mr3rr0r501" target="_blank"><i class="fa-brands fa-youtube"></i></a>  
-                                <a href="https://www.linkedin.com/in/yuvaraj-a-57a103171/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                                <a href="https://www.facebook.com/profile.php?id=100027796417995" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/mr_3rr0r_501/"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/c/Mr3rr0r501"><i class="fa-brands fa-youtube"></i></a>  
+                                <a href="https://www.linkedin.com/in/yuvaraj-a-57a103171/"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.facebook.com/profile.php?id=100027796417995"><i class="fa-brands fa-facebook"></i></a>
                         </div>
                 </div>
         </footer>
