--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="UTF-8" />
         <meta property="og:title" content="Profile">
-        <meta property="og:image" content="/assets/logo.jpg"/>
+        <meta property="og:image" content="https://raw.githubusercontent.com/yuvarajucet/portfolio/development/assets/logo.jpg"/>
         <meta name="description" content="Here you will get about my projects, achievements and my contact details ">
         <meta name="author" content="Yuvaraj | Mr_3rr0r_501">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
