--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="line">
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="https://github.com/yuvarajucet/P_H_Y-WIFI">P-H-Y-Wifi</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/P_H_Y-WIFI" target="_blank">P-H-Y-Wifi</a></h2>
                                                 <p>P-H-Y-Wifi is <b>Shell</b> script based tool.This tool will help to
                                                         analyze and test the security of wireless network with the help
                                                         of <b>Aircrack-ng</b>.</p>
@@ -103,7 +103,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="https://github.com/yuvarajucet/Local-to-air">Local to Air</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/Local-to-air" target="_blank">Local to Air</a></h2>
                                                 <p>This tool will help to share your local files to remote user with the
                                                         help of <b>ngrok</b> tunneling.Also you can host your static or
                                                         dynamic (PHP) websites with help of this tool. </p>
@@ -118,7 +118,7 @@
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="https://github.com/yuvarajucet/easy-phishing">Easy-Phishing</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/easy-phishing" target="_blank">Easy-Phishing</a></h2>
                                                 <p>Fake Phishing pages for
                                                         <b>Instagram</b>,<b>Twitter</b>,<b>Facebook</b> and <b>Gmail</b>
                                                         This tool is educational purpose.This tool available in
@@ -136,7 +136,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="https://github.com/yuvarajucet/subdomain-takeover">Subdomain-Takeover</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/subdomain-takeover" target="_blank">Subdomain-Takeover</a></h2>
                                                 <p>This tool will help to find vulnerable subdomains (for subdomain
                                                         takeover vulnerability) based on subdomain's response body.</p>
                                                 <ul style="list-style: none;">
@@ -149,7 +149,7 @@
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="https://github.com/yuvarajucet/utube-download">Utube-downloader</a> </h2>
+                                                <h2><a href="https://github.com/yuvarajucet/utube-download" target="_blank">Utube-downloader</a> </h2>
                                                 <p>Download your favorite youtube videos with this script!</p>
                                                 <ul style="list-style: none;">
                                                         <li><b>Build with:</b></li>
@@ -161,7 +161,7 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="https://github.com/yuvarajucet/pyctf">PY-CTF</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/pyctf" target="_blank">PY-CTF</a></h2>
                                                 <p>This game have some common real world vulnerability to exploit.
                                                         Example : <b>Stored-XSS</b>,<b>Account Takeover</b>,<b>Image
                                                                 Meta data extraction</b> and <b>etc...</b></p>
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="container left">
                                         <div class="content">
-                                                <h2><a href="https://github.com/yuvarajucet/ARP-spoofing-detection">ARP-Spoofing Detection and Prevension</a></h2>
+                                                <h2><a href="https://github.com/yuvarajucet/ARP-spoofing-detection" target="_blank">ARP-Spoofing Detection and Prevension</a></h2>
                                                 <p>ARP-Spoofing detection script having automated Detection and
                                                         Prevension modules. It continuesly Monitering router's client
                                                         Entry table and found ARP-Spoofing attack it automatically find
@@ -216,31 +216,31 @@
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="https://hackerone.com/replyify/thanks">Replyify -<span> Top
+                                                <h2><a href="https://hackerone.com/replyify/thanks" target="_blank">Replyify -<span> Top
                                                                 7<sup>th</sup> by Hackerone</span></a></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="https://hackerone.com/top_echelon_software/thanks">Top
+                                                <h2><a href="https://hackerone.com/top_echelon_software/thanks" target="_blank">Top
                                                                 Echelon software -<span> Top 8<sup>th</sup> by Hackerone</span></a></h2>
                                         </div> 
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="https://hackerone.com/expressionengine/thanks">Expression
+                                                <h2><a href="https://hackerone.com/expressionengine/thanks" target="_blank">Expression
                                                                 Engine - <span>Top 24<sup>th</sup> by Hackerone</span></a></h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="https://www.hindawi.com/responsible-disclosure-policy/">Hindawi <span>by VDP</span></a>
+                                                <h2><a href="https://www.hindawi.com/responsible-disclosure-policy/" target="_blank">Hindawi <span>by VDP</span></a>
                                                 </h2>
                                         </div>
                                 </div>
                                 <div class="container right">
                                         <div class="content">
-                                                <h2><a href="#">More In-Progress...</a></h2>
+                                                <h2><a href="">More In-Progress...</a></h2>
                                         </div>
                                 </div>
                                 <div class="container left">
